--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "algorithms-exercises",
   "version": "1.0.0",
+  "type": "module",
   "description": "The exercises for the Complete Intro to Algorithms",
   "main": "index.html",
   "scripts": {
@@ -12,6 +13,7 @@
   "dependencies": {
     "lodash": "4.17.21",
     "parcel": "2.0.0-beta.2",
+    "prettier": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
